--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <div class = "content-section">
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-Bottom mb-4">Register new user</legend>
+            {{ form.as_p }}
+        </fieldset>
+        <div class=""form-group>
+            <button class="btn btn-outline-info" type="submit">Register User</button>
+        </div>
+    </form>
+    <div class="border-top pt-3">
+        <small class="text-muted">head back to login<a class="ml-2" href="#">Login</a></small>
+    </div>
+    </div>
+{% endblock %}
