--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-    <a class="navbar-brand" href="{% url 'register' %}">Systems Bug Tracker</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Systems Bug Tracker</a>
     {% if user.is_staff %}
     <ul class="navbar-nav mr-auto">
     <li class="nav-item"><a href="{% url 'register' %}">+ New |</a></li>
