--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -12,7 +12,7 @@
         </div>
     </form>
     <div class="border-top pt-3">
-        <small class="text-muted">head back to login<a class="ml-2" href="#">Login</a></small>
+        <small class="text-muted">head back to login<a class="ml-2" href="login.html">Login</a></small>
     </div>
     </div>
 {% endblock %}
