--- a/templates/base.html
+++ b/templates/base.html
@@ -13,11 +13,9 @@
   <body>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
     <a class="navbar-brand" href="{% url 'home' %}">Systems Bug Tracker</a>
-    {% if user.is_staff %}
     <ul class="navbar-nav mr-auto">
     <li class="nav-item"><a href="{% url 'register' %}">+ New |</a></li>
     </ul>
-    {% endif %}
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a href="{% url 'register' %}">| All Packages</a></li>
     </ul>
@@ -30,11 +28,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  {% if user.is_staff %}
-                {{ "Staff: " }}{{ user.email }}
-                  {% else %}
-                      {{ user.email }}
-                      {% endif %}
+                      {{ user.username }}
               </a>
 
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
@@ -52,7 +46,7 @@
           </ul>
         {% else %}
           <form class="form-inline ml-auto">
-            <a href="{% url 'register' %}" class="btn btn-outline-secondary">Log in</a>
+            <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
             <a href="{% url 'register' %}" class="btn btn-primary ml-2">Sign up</a>
           </form>
         {% endif %}
