--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,11 @@
         {% endif %}
     </ul>
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item"><a href="{% url 'register' %}">| All Packages</a></li>
+        {% if user.is_authenticated %}
+      <li class="nav-item"><a href="{% url 'dashboard' %}">| All Tickets</a></li>
+        {% else %}
+        <li class="nav-item"><a href="{% url 'login' %}">| All Tickets</a></li>
+        {% endif %}
     </ul>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -43,6 +47,10 @@
                 <a class="dropdown-item" href="{% url 'register' %}">Change Password</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                  {% if user.is_staff %}
+                  <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'register' %}">Register new user</a>
+                      {% endif %}
               </div>
             </li>
           </ul>
