--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                 <a class="dropdown-item" href="{% url 'register' %}">Edit Details</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'register' %}">Change Password</a>
+                <a class="dropdown-item" href="{% url 'changepassword' %}">Change Password</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                   {% if user.is_staff %}
