--- a/templates/editTicket.html
+++ b/templates/editTicket.html
@@ -6,19 +6,20 @@
   <h1>Package Details</h1>
   <form method="POST">
     {% csrf_token %}
-      {% if request.user == object.staffmember %}
+      {% if request.user == object.staffmember or user.is_Staff %}
     {{ form.as_p }}
+     <input class="btn btn-success" type="submit" value="Edit ticket">
       {% else %}
           <span class="font-weight-bold">{{ "Title: " }}{{ object.ticketName }}</span>
       <div class="card-body">
        <div class="card-body">
       <p>{{ "Issue: " }}{{ object.ticketDescription}}</p>
       <p>{{ "time made: " }}{{ object.ticketTime }}</p>
-      <p>{{ "priority: " }}{{ form.priority }}</p>
-      <p>{{ "status: " }}{{ form.condition }}</p>
+      <p>{{ "priority: " }}{{ object.priority }}</p>
+      <p>{{ "status: " }}{{ object.condition }}</p>
       <p>{{ "Posted by: " }}{{ object.staffmember }}</p>
       {% endif %}
-    <input class="btn btn-success" type="submit" value="Add Comment">
+     <input class="btn btn-success" type="submit" value="Edit ticket">
       </div>
   </form>
 {% endblock %}
