--- a/templates/Extra HTML.html
+++ b/templates/Extra HTML.html
@@ -12,18 +12,16 @@
 
 
 <!--
-    <hr>
-    <form method="POST">
-        {% csrf_token %}
-    <a class="btn btn-default" href="{% url 'add-comment' pk=ticket.pk %}">Add comment</a>
-{% for comment in comment.all %}
+<hr>
+     <form method="post" action="Createcomment.html">
+    <a class="btn btn-default" href="{% url 'add-comment' pk=object.pk %}">Add comment</a>
+{% for comment in object.comment.all %}
     <div class="form-group">
-        <div class="date">{{ comment.timestamp }}</div>
-        <strong>{{ comment.user }}</strong>
-        <p>{{ comment.description | linebreaks}}</p>
+        <div class="date">{{ Comment.timestamp }}</div>
+        <strong>{{ Comment.user }}</strong>
+        <p>{{ Comment.description | linebreaks}}</p>
     </div>
     {% empty %}
     <p>No comments here yet :(</p>
     {% endfor %}
-    </form>
-
+</form>
